# DA-PYTHON-12

./: .env  .flake8  .gitattributes  README.md  env_ex.txt  epic_events.db  init_setup.py  pyproject.toml
controllers/: auth_controller.py  cli.py  client_controller.py  contract_controller.py  role_controller.py  user_controller.py
epic_events/: .coverage  __main__.py  auth_token.json  database.py  epic_events.db  init_add_user.py  init_setup.py  main.py  permissions.py  test_main.py
epic_events/controllers/: __init__.py  auth_controller.py  cli.py  client_controller.py  contract_controller.py  event_controller.py  permissions_controller.py  role_controller.py  user_controller.py
epic_events/models/: __init__.py  base.py  client.py  contract.py  event.py  role.py  user.py
epic_events/views/: auth_view.py  base.py  client_view.py  contract_view.py  event_view.py  generic_view.py  permissions_view.py  role_view.py  user_view.py
epic_events_crm/: main.py  requirements.txt
epic_events_crm/cli/: client_commands.py
epic_events_crm/models/: client.py  user.py
epic_events_crm_old/cli/: contract_commands.py  event_commands.py  user_commands.py
epic_events_crm_old/database/: db.py
epic_events_crm_old/models/: contract.py  event.py
epic_events_crm_old/utils/: auth.py  roles.py  sentry.py
flake8_html/: index.html
models/: client.py
tests/: .coverage  conftest.py  epic_events.db
tests/flake8_rapport/: conftest.report.html  conftest.source.html  index.html  integration.test_basic.report.html  (+17 more)
views/: client_view.py  contract_view.py  event_view.py
(+9 files in other folders)
